# Stock-trading-with-AI-and-MCP

./: .env.example  README.md  notebook-gemini.ipynb  notebook.ipynb
MCP/: .dockerignore  .gitignore  Dockerfile  README.md  SERVER_GUIDE.md  pyproject.toml
MCP/stock_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
MCP/stock_mcp_server/server/: app.py
MCP/stock_mcp_server/tools/: recommend.py
